--- a/service/service-product/pom.xml
+++ b/service/service-product/pom.xml
@@ -11,7 +11,6 @@
 
     <artifactId>service-product</artifactId>
     <version>1.0</version>
-
     <packaging>jar</packaging>
     <name>service-product</name>
     <description>service-product</description>
@@ -46,6 +45,14 @@
                 <filtering>false</filtering>
             </resource>
         </resources>
+
+        <finalName>service-product</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
