--- a/service/service-user/pom.xml
+++ b/service/service-user/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-user</artifactId>
+    <version>1.0</version>
+    <packaging>jar</packaging>
+    <name>service-user</name>
+    <description>service-user</description>
+
     <dependencies>
         <dependency>
             <groupId>com.suchengyu.gmall</groupId>
@@ -17,4 +22,15 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+
+    <!--打包插件-->
+    <build>
+        <finalName>service-user</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
