--- a/web/web-all/pom.xml
+++ b/web/web-all/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>web-all</artifactId>
 
+    <version>1.0</version>
+    <artifactId>web-all</artifactId>
     <packaging>jar</packaging>
     <name>web-all</name>
     <description>web-all</description>
