--- a/service/service-list/pom.xml
+++ b/service/service-list/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-list</artifactId>
+    <version>1.0</version>
+    <packaging>jar</packaging>
+    <name>service-list</name>
+    <description>service-list</description>
 
     <dependencies>
         <dependency>
@@ -29,5 +33,15 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
     </dependencies>
+    <!--打包插件-->
+    <build>
+        <finalName>service-list</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
