--- a/service/service-mq/pom.xml
+++ b/service/service-mq/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>service-mq</artifactId>
 
+    <artifactId>service-mq</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>service-mq</name>
     <description>service-mq</description>
