--- a/service/service-payment/pom.xml
+++ b/service/service-payment/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>service-payment</artifactId>
 
+    <artifactId>service-payment</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>service-payment</name>
     <description>service-payment</description>
@@ -33,5 +34,16 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+
+    <!--打包插件-->
+    <build>
+        <finalName>service-payment</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
