--- a/service/service-task/pom.xml
+++ b/service/service-task/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>service-task</artifactId>
 
+    <artifactId>service-task</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>service-task</name>
     <description>service-task</description>
